Added Alcohol Consumption test data. Fixed various bugs.